package com.example.ontime.routine.presentation

enum class TaskStaus {
    INCOMPLETED,
    COMPLETED,
    SKIPPED
}